version 2.4 for java 11